plugins {
    id 'com.github.johnrengelman.shadow' version '5.1.0'
    id 'java'
}

group 'com.sanjay900'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.9.15'
    compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
    compile 'org.slf4j:slf4j-nop:1.7.25'
    compile group: 'net.java.dev.jna', name: 'jna', version: '5.4.0'
    compile("javax.inject:javax.inject:1")
}

shadowJar {
    baseName = 'safeNativeCode'
    classifier = null
    version = null
    manifest {
        attributes(
            'Add-Opens': 'java.rmi/sun.rmi.registry'
        )
    }
    from sourceSets.main.allSource
}
tasks.test.dependsOn tasks.shadowJar
